# drf-auth-

./: docker-compose.yml  manage.py  pyproject.toml  requirements.txt
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
bookapi/: asgi.py  settings.py  urls.py  wsgi.py
